--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ body, html {
     <span class="tooltip">Ruhr-Universität Bochum</span>
   </div>
     <div class="w3-quarter logo-container">
-    <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/Logo_KKI_RGB_2D_blau_komplett.svg" alt="KEMPEN KRAUSE INGENIEURE GmbH" style="width: 70%; height:120px"></span>
+    <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/Logo_KKI_RGB_2D_blau_komplett.svg" alt="KEMPEN KRAUSE INGENIEURE GmbH" style="width: 80%; height:120px"></span>
     <span class="tooltip">KEMPEN KRAUSE INGENIEURE GmbH</span>
   </div>
   <div class="bottom-row" style="display: flex; justify-content: center; width: 100%; margin-top: 60px">
@@ -280,19 +280,16 @@ body, html {
 </style>
 
 <!-- Mentor- Vorstellung -->
-<div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
+<div class="w3-container w3-light-grey">
   <h3 class="w3-center">UNTERSTÜTZT DURCH</h3>
-Unser Projekt wird durch Prof. Dr.-Ing. Martin Mertens unterstützt, einen bekannten Experten in der Bauwerksprüfung. Prof. Dr.-Ing. Martin Mertens ist Geschäftsführer der Dr. Mertens Ingenieurgesellschaft mbH.
-
+Unser Projekt wird durch <strong>Prof. Dr.-Ing. Martin Mertens</strong> unterstützt, einen bekannten Experten in der Bauwerksprüfung. Prof. Dr.-Ing. Martin Mertens ist Geschäftsführer der Dr. Mertens Ingenieurgesellschaft mbH.
 Neben seiner Tätigkeit als Bauwerksprüfer lehrt er an der Hochschule Bochum in den Bereichen Technische Mechanik, Baustatik, Holz- und Brückenbau. 
-
 Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Expertise uns hilft, die Konformität unserer KI-Produkte mit den deutschen Richtlinien sicherzustellen.
-
   </div>
 </div>
 
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
+<div class="w3-container" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">KONTAKT</h3>
   <p class="w3-center w3-large">Folgen Sie uns auf <a href="https://www.linkedin.com/company/instand-digital/">LinkedIn</a>, oder kontaktieren Sie uns:</p>
   <div style="margin-top:48px; text-align: center;">
