--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body, html {
 
 <!-- Ünterstützt durch... -->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
-    <h3 class="w3-center">UNTERSTÜTZT DURCH</h3>
+    <h3 class="w3-center">UNSER NETZWERK</h3>
 
   <div class="w3-quarter logo-container">
     <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/ZI_logo.svg" alt="Zetcon Ingenieure" style="height:120px"></span>
@@ -280,8 +280,8 @@ body, html {
 </style>
 
 <!-- Mentor- Vorstellung -->
-<div class="w3-container w3-light-grey">
-  <h3 class="w3-center">UNTERSTÜTZT DURCH</h3>
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <h3 class="w3-center">UNSER MENTOR</h3>
 Unser Projekt wird durch <strong>Prof. Dr.-Ing. Martin Mertens</strong> unterstützt, einen bekannten Experten in der Bauwerksprüfung. Prof. Dr.-Ing. Martin Mertens ist Geschäftsführer der Dr. Mertens Ingenieurgesellschaft mbH.
 Neben seiner Tätigkeit als Bauwerksprüfer lehrt er an der Hochschule Bochum in den Bereichen Technische Mechanik, Baustatik, Holz- und Brückenbau. 
 Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Expertise uns hilft, die Konformität unserer KI-Produkte mit den deutschen Richtlinien sicherzustellen.
