--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@ body, html {
 <!-- Mentor- Vorstellung -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="mentor">
   <h3 class="w3-center">UNSER MENTOR</h3>
+  <div class="w3-center">
 Unser Projekt wird durch <strong>Prof. Dr.-Ing. Martin Mertens</strong> unterstützt, einen bekannten Experten in der Bauwerksprüfung. Prof. Dr.-Ing. Martin Mertens ist Geschäftsführer der Dr. Mertens Ingenieurgesellschaft mbH.
 Neben seiner Tätigkeit als Bauwerksprüfer lehrt er an der Hochschule Bochum in den Bereichen Technische Mechanik, Baustatik, Holz- und Brückenbau.<br>
 Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Expertise uns hilft, die Konformität unserer KI-Produkte mit den deutschen Richtlinien sicherzustellen.
