--- a/index.html
+++ b/index.html
@@ -190,17 +190,17 @@ body, html {
             <img class="w3-circle w3-image" src="/img/firdes.jpg" alt="Firdes" style="height:100%">
           </div>
           <div class="w3-col m8" style="padding: 16px;">
-            <h3>Firdes Celik</h3>
+            <h3>Firdes Rona Celik</h3>
             <p class="w3-opacity">KI-Entwicklerin</p>
-            <p>Firdes Celik hat Mathematik und Anglistik im Bachelor studiert und anschließend einen Master in Computational Engineering abgeschlossen. Während ihres Studiums arbeitete sie als Werkstudentin in einem Softwareunternehmen an der Entwicklung diverser KI-basierter Softwarelösungen. Dort kam sie erstmals mit KI in Berührung. Seitdem begeistert sie sich für den Einsatz von KI zur Lösung komplexer realer Probleme. Sie promoviert derzeit und forscht an der KI-basierten Automatisierung der Schadensdokumentation an der Ruhr-Universität Bochum.</p>
-            <p><button class="w3-button w3-light-grey w3-block" onclick="window.location.href='mailto:firdes.celik@ruhr-uni-bochum.de'"><i class="fa fa-envelope"></i> Kontakt</button></p>
+            <p>Firdes Rona Celik hat Mathematik und Anglistik im Bachelor studiert und anschließend einen Master in Computational Engineering abgeschlossen. Während ihres Studiums arbeitete sie als Werkstudentin in einem Softwareunternehmen an der Entwicklung diverser KI-basierter Softwarelösungen. Dort kam sie erstmals mit KI in Berührung. Seitdem begeistert sie sich für den Einsatz von KI zur Lösung komplexer realer Probleme. Sie promoviert derzeit und forscht an der KI-basierten Automatisierung der Schadensdokumentation an der Ruhr-Universität Bochum.</p>
+            <p><button class="w3-button w3-light-grey w3-block" onclick="window.location.href='mailto:fr.celik@icloud.com'"><i class="fa fa-envelope"></i> Kontakt</button></p>
           </div>
         </div>
       </div>
     </div>
   </div>
   <p class="w3-center w3-large">Wir suchen nach weiteren Experten!</p>
-  <p><button class="w3-button w3-light-grey w3-block" onclick="window.location.href='mailto:firdes.celik@ruhr-uni-bochum.de'"><i class="fa fa-envelope"></i> Kontaktieren Sie uns!</button></p>
+  <p><button class="w3-button w3-light-grey w3-block" onclick="window.location.href='mailto:fr.celik@icloud.com'"><i class="fa fa-envelope"></i> Kontaktieren Sie uns!</button></p>
 </div>
 
 <!-- Ünterstützt durch... -->
@@ -294,9 +294,9 @@ Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Exper
   <h3 class="w3-center">KONTAKT</h3>
   <p class="w3-center w3-large">Folgen Sie uns auf <a href="https://www.linkedin.com/company/instand-digital/">LinkedIn</a>, oder kontaktieren Sie uns:</p>
   <div style="margin-top:48px; text-align: center;">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Ruhr-Universität Bochum, IC 6/69</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+49 234 32 - 28983</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> firdes.celik@ruhr-uni-bochum.de</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Ruhr-Universität Bochum</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+49 177 5400284</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> fr.celik@icloud.com</p>
     <br>
     <!-- Image of location/map -->
     <!-- <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"> -->
@@ -318,8 +318,8 @@ Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Exper
 
 <div class="w3-padding-large w3-left-align">
   <p><strong>Impressum</strong></p>
-  <p>Anbieter:<br />Firdes Celik<br />Universitätsstraße 150<br />44801 Bochum</p>
-  <p>Kontakt:<br />Telefon: +49 234 32 - 28983<br />E-Mail:  firdes.celik@ruhr-uni-bochum.de<br />Website: <a href="https://instanddigital.de">instanddigital.de</a></p>
+  <p>Anbieter:<br />Firdes Rona Celik<br />Universitätsstraße 150<br />44801 Bochum</p>
+  <p>Kontakt:<br />Telefon: +49 177 5400284<br />E-Mail:  fr.celik@icloud.com</p>
 </div>
 </footer>
 
