--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ body, html {
           <div class="w3-col m8" style="padding: 16px;">
             <h3>Firdes Rona Celik</h3>
             <p class="w3-opacity">KI-Entwicklerin</p>
-            <p>Firdes Rona Celik hat Mathematik und Anglistik im Bachelor studiert und anschließend einen Master in Computational Engineering abgeschlossen. Während ihres Studiums arbeitete sie als Werkstudentin in einem Softwareunternehmen an der Entwicklung diverser KI-basierter Softwarelösungen. Dort kam sie erstmals mit KI in Berührung. Seitdem begeistert sie sich für den Einsatz von KI zur Lösung komplexer realer Probleme. Sie promoviert derzeit und forscht an der KI-basierten Automatisierung der Schadensdokumentation an der Ruhr-Universität Bochum.</p>
+            <p>Firdes Rona Celik hat Mathematik und Anglistik im Bachelor studiert und anschließend einen Master in Computational Engineering abgeschlossen. Während ihres Studiums arbeitete sie als Werkstudentin in einem Softwareunternehmen an der Entwicklung diverser KI-basierter Softwarelösungen. Dort kam sie erstmals mit KI in Berührung. Seitdem begeistert sie sich für den Einsatz von KI zur Lösung komplexer realer Probleme. Sie promoviert derzeit und forscht an der KI-basierten Automatisierung der Schadensdokumentation.</p>
             <p><button class="w3-button w3-light-grey w3-block" onclick="window.location.href='mailto:fr.celik@icloud.com'"><i class="fa fa-envelope"></i> Kontakt</button></p>
           </div>
         </div>
@@ -210,14 +210,6 @@ body, html {
   <div class="w3-quarter logo-container">
     <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/ZI_logo.svg" alt="Zetcon Ingenieure" style="height:120px"></span>
     <span class="tooltip">ZETCON Ingenieure</span>
-  </div>
-  <div class="w3-quarter logo-container">
-    <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/wf_logo_negative.svg" alt="World Factory" style="height:120px">
-    <span class="tooltip">Worldfactory Start-up Center der Ruhr-Universität Bochum</span>
-  </div>
-  <div class="w3-quarter logo-container">
-    <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/rub_logo_weiss.svg" alt="Ruhr-Uni Bochum" style="height:120px"></span>
-    <span class="tooltip">Ruhr-Universität Bochum</span>
   </div>
     <div class="w3-quarter logo-container">
     <span class="w3-xxlarge"><img class="w3-image w3-padding-16" src="/img/Logo_KKI_RGB_2D_blau_komplett.svg" alt="KEMPEN KRAUSE INGENIEURE GmbH" style="width: 80%; height:120px"></span>
@@ -294,7 +286,6 @@ Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Exper
   <h3 class="w3-center">KONTAKT</h3>
   <p class="w3-center w3-large">Folgen Sie uns auf <a href="https://www.linkedin.com/company/instand-digital/">LinkedIn</a>, oder kontaktieren Sie uns:</p>
   <div style="margin-top:48px; text-align: center;">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Ruhr-Universität Bochum</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+49 177 5400284</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> fr.celik@icloud.com</p>
     <br>
@@ -318,7 +309,7 @@ Wir schätzen die Unterstützung von Prof. Dr.-Ing. Martin Mertens, dessen Exper
 
 <div class="w3-padding-large w3-left-align">
   <p><strong>Impressum</strong></p>
-  <p>Anbieter:<br />Firdes Rona Celik<br />Universitätsstraße 150<br />44801 Bochum</p>
+  <p>Anbieter:<br />Firdes Rona Celik<br />44801 Bochum</p>
   <p>Kontakt:<br />Telefon: +49 177 5400284<br />E-Mail:  fr.celik@icloud.com</p>
 </div>
 </footer>
